# COMP3431-Assignment1

assign1_2013/: CMakeLists.txt  Report
assign1_2013/include/assign1_2013/: colours.h  path.h
assign1_2013/launch/: simple_nav.launch
assign1_2013/launch/beacons/: circle.launch  sparse.launch
assign1_2013/src/: beacons.cpp  path.cpp  trig.cpp  trig.cpp~
assign1_2013/src/nodes/: detector.cpp  safety_first.cpp~  simple_nav.cpp  simple_nav.cpp~  visual.cpp
asst1/: CMakeLists.txt  mainpage.dox  manifest.xml
asst1/launch/: simple_nav.launch
asst1/launch/beacons/: trial.launch
asst1/src/: simple_nav.cpp
asst1/src/nodes/: detector.cpp  safety_first.cpp  simple_nav.cpp
comp3431/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
comp3431/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
comp3431/devel/lib/assign1_2013/: detector  kalman  odom_clean  safety_first  simple_nav  visual
comp3431/devel/lib/pkgconfig/: assign1_2013.pc
comp3431/devel/share/assign1_2013/cmake/: assign1_2013Config.cmake
comp3431/src/assign1_2013/: CMakeLists.txt  CMakeLists.txt~  HowTo  Report  id_rsa.pub  id_rsa.pub.pub  package.xml
comp3431/src/assign1_2013/include/assign1_2013/: beacons.h  trig.h  trig.h~
comp3431/src/assign1_2013/launch/: path.launch  simple_nav.launch  simple_nav.launch~  visual.launch
comp3431/src/assign1_2013/launch/beacons/: dense.launch
comp3431/src/assign1_2013/src/: beacons.cpp  beacons.cpp~  trig.cpp  trig.cpp~
comp3431/src/assign1_2013/src/nodes/: detector.cpp  detector.cpp.orig  detector.cpp~  detectorA.cpp  distance.cpp  kalman.cpp  odom_clean.cpp  safety_first.cpp  simple_nav (copy).cpp  simple_nav.cpp  simple_nav.cpp~  simple_nav_alpha.cpp  simple_nav_ekf.cpp  simple_nav_orig.cpp  visual.cpp
